--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h2 class="fade-in">About Me</h2>
         <div class="about-grid">
           <div class="about-image fade-in">
-            <img src="/api/placeholder/600/600" alt="Sarah Chen's Portrait" />
+            <img src="images/ivanna.jpg" alt="Ivanna Agbai's Photo" />
           </div>
           <div class="about-text fade-in">
             <p>
@@ -110,7 +110,7 @@
           <div class="project-card fade-in">
             <div class="project-image">
               <img
-                src="/api/placeholder/600/400"
+                src="images/blooming_beauty.jpg"
                 alt="Blooming Beauty E-commerce"
               />
             </div>
@@ -170,7 +170,7 @@
           <!-- Project 2 -->
           <div class="project-card fade-in">
             <div class="project-image">
-              <img src="/api/placeholder/600/400" alt="Wellness Tracker" />
+              <img src="images/mindful_moments.jpg" alt="Wellness Tracker" />
             </div>
             <div class="project-content">
               <h3 class="project-title">Mindful Moments</h3>
@@ -228,7 +228,7 @@
           <!-- Project 3 -->
           <div class="project-card fade-in">
             <div class="project-image">
-              <img src="/api/placeholder/600/400" alt="Recipe App" />
+              <img src="cozy_kitchen.jpg" alt="Recipe App" />
             </div>
             <div class="project-content">
               <h3 class="project-title">Cozy Kitchen</h3>
