index page update
index page update

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           <!-- Project 3 -->
           <div class="project-card fade-in">
             <div class="project-image">
-              <img src="cozy_kitchen.jpg" alt="Recipe App" />
+              <img src="images/cozy_kitchen.jpg" alt="Recipe App" />
             </div>
             <div class="project-content">
               <h3 class="project-title">Cozy Kitchen</h3>
