--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             </a>
           </li>
           <li>
-            <a href="#" title="Instagram">
+            <a href="https://www.instagram.com/?utm_source=pwa_homescreen&__pwa=1https://www.instagram.com/?utm_source=pwa_homescreen&__pwa=1https://www.instagram.com/?utm_source=pwa_homescreen&__pwa=1https://www.instagram.com/?utm_source=pwa_homescreen&__pwa=1https://www.instagram.com/?utm_source=pwa_homescreen&__pwa=1" title="Instagram">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
