--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             </a>
           </li>
           <li>
-            <a href="#" title="Dribbble">
+            <a href="https://dribbble.com/ivanna-13?onboarding=true&designer=true" title="Dribbble">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
